# nativebuild-lab

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  README.FAILED.md  README.md  zstd-darwin-arm.sh  zstd-darwin.sh  zstd-ios-arm64.sh  zstd-linux-aarch64.bat  zstd-linux-aarch64.sh  zstd-linux-amd64.bat  zstd-linux-amd64.sh  zstd-linux-arm64.bat  zstd-linux-arm64.sh  zstd-linux-windows.bat  zstd-linux-x64.bat  zstd-linux.bat  zstd-linux.sh  zstd-windows-arm64-cmake.bat  zstd-windows-arm64.bat  zstd-windows-arm64.sh  zstd-windows-x64-cmake.bat  zstd-windows-x64.bat  zstd-windows-x64.sh  zstd-windows-x86-cmake.bat  zstd-windows-x86.bat  zstd-windows-x86.sh
.github/workflows/: build-fibo.yaml  build-lz4.yaml  build-mbedtls.yaml  build-zstd.yaml  lz4-build.yaml  toc.yaml  zstd-build.yaml
artifact/lz4/android-arm64/: lz4
artifact/lz4/android-x64/: lz4
artifact/lz4/android-x86/: lz4
artifact/lz4/ios-arm64/: liblz4.dylib
artifact/lz4/linux-arm64/: lz4
artifact/lz4/linux-x64/: lz4
artifact/lz4/osx-arm64/: liblz4.dylib  lz4
artifact/lz4/osx-x64/: liblz4.dylib  lz4
artifact/mbedtls/ios-arm64/: libmbedcrypto.dylib  libmbedtls.dylib  libmbedx509.dylib
artifact/mbedtls/ios-arm64-patch/: libmbedtls.dylib  libmbedx509.dylib
artifact/mbedtls/ios-arm64-patch-symbol/: libmbedtls.dylib  libmbedx509.dylib
artifact/mbedtls/ios-arm64-symbol/: libmbedcrypto.dylib  libmbedtls.dylib  libmbedx509.dylib
artifact/mbedtls/osx-arm64/: libmbedcrypto.dylib  libmbedtls.dylib  libmbedx509.dylib
artifact/mbedtls/osx-arm64-patch/: libmbedcrypto.dylib  libmbedtls.dylib
artifact/mbedtls/osx-arm64-patch-symbol/: libmbedtls.dylib  libmbedx509.dylib
artifact/mbedtls/osx-arm64-symbol/: libmbedcrypto.dylib  libmbedtls.dylib  libmbedx509.dylib
artifact/mbedtls/osx-x64/: libmbedtls.dylib  libmbedx509.dylib
artifact/mbedtls/osx-x64-patch/: libmbedcrypto.dylib  libmbedtls.dylib  libmbedx509.dylib
artifact/mbedtls/osx-x64-patch-symbol/: libmbedcrypto.dylib  libmbedtls.dylib  libmbedx509.dylib
artifact/mbedtls/osx-x64-symbol/: libmbedcrypto.dylib  libmbedtls.dylib
artifact/mbedtls/win-arm64/: mbedcrypto.lib  mbedtls.lib  mbedx509.lib
artifact/mbedtls/win-arm64-patch/: mbedcrypto.lib  mbedtls.lib  mbedx509.lib
artifact/mbedtls/win-arm64-patch-symbol/: mbedcrypto.lib  mbedtls.lib  mbedx509.lib
artifact/mbedtls/win-arm64-symbol/: mbedcrypto.lib  mbedtls.lib  mbedx509.lib
artifact/osx-x64/: zstd
builder/: zstd-darwin.sh  zstd-linux-arm64.bat  zstd-linux-arm64.sh  zstd-linux-x64.sh  zstd-linux.dockerfile  zstd-windows-arm64.bat  zstd-windows-x64.sh  zstd-windows-x86.sh
builder/fibo/: linux-arm64.bat  linux-arm64.sh  linux-x64.bat  linux-x64.sh  settings.bat  settings.sh  windows-x64.bat  windows-x86.bat
builder/lz4/: lz4-android-arm.bat  lz4-android-arm.sh  lz4-android-arm64.bat  lz4-android-arm64.sh  lz4-android-x64.bat  lz4-android-x64.sh  lz4-android-x86.bat  lz4-android-x86.sh  lz4-darwin-arm64.sh  lz4-darwin-x64.sh  lz4-ios-arm64.sh  lz4-linux-arm64.bat  lz4-linux-arm64.sh  lz4-linux-x64.bat  lz4-linux-x64.sh  lz4-windows-arm64.bat  lz4-windows-x64.bat  lz4-windows-x86-cmake.bat  lz4-windows-x86.bat  settings.bat  settings.sh
builder/mbedtls/: mbedtls-android-arm.bat  mbedtls-android-arm.sh  mbedtls-android-arm64.bat  mbedtls-android-arm64.sh  mbedtls-android-x64.bat  mbedtls-android-x64.sh  mbedtls-android-x86.bat  mbedtls-android-x86.sh  mbedtls-darwin-arm64.sh  mbedtls-darwin-x64.sh  mbedtls-ios-arm64.sh  mbedtls-linux-arm64-make.bat  mbedtls-linux-arm64-make.sh  mbedtls-linux-arm64.bat  mbedtls-linux-arm64.sh  mbedtls-linux-x64-alpine-make.bat  mbedtls-linux-x64-alpine-make.sh  mbedtls-linux-x64-alpine.bat  mbedtls-linux-x64-alpine.sh  mbedtls-linux-x64-cmake.bat  mbedtls-linux-x64-cmake.sh  mbedtls-linux-x64-make.bat  mbedtls-linux-x64-make.sh  mbedtls-linux-x64.bat  mbedtls-linux-x64.sh  mbedtls-windows-arm64.bat  mbedtls-windows-x64.bat  mbedtls-windows-x86.bat  settings.bat  settings.sh  windows.patch
builder/mbedtls_wrapper/: linux-arm64.bat  linux-x64.bat  settings.bat  settings.sh  windows-arm64.bat  windows-x64.bat
builder/zstd/: ios-arm64.toolchain.cmake  ios-builder.sh  ios-download-zlib.sh  settings.bat  settings.sh  toolchain.cmake  zstd-android-arm.bat  zstd-android-arm.sh  zstd-android-arm64.bat  zstd-android-arm64.sh  zstd-android-x64.bat  zstd-android-x64.sh  zstd-android-x86.bat  zstd-android-x86.sh  zstd-android.bat  zstd-builder-aarch64.sh  zstd-builder-ios.sh  zstd-builder-windows-arm64.sh  zstd-builder-windows-x86.sh  zstd-builder-windows.sh  zstd-builder.sh  zstd-darwin-arm64-make.sh  zstd-darwin-arm64.sh  zstd-darwin-x64-make.sh  zstd-darwin-x64.sh  zstd-ios-arm64.sh  zstd-linux-arm64-make.bat  zstd-linux-arm64-make.sh  zstd-linux-arm64.bat  zstd-linux-arm64.sh  zstd-linux-x64-make.bat  zstd-linux-x64-make.sh  zstd-linux-x64.bat  zstd-linux-x64.sh  zstd-windows-arm64-cmake.bat  zstd-windows-arm64-make.bat  zstd-windows-arm64-make.sh  zstd-windows-arm64-mingw.bat  zstd-windows-arm64.bat  zstd-windows-arm64.sh  (+14 more)
fibo/: .gitignore  Makefile  README.md
fibo/examples/: .gitignore  CMakeLists.txt  CMakelists.txt  Makefile
fibo/lib/: Makefile  dummy.h  fibo.c  fibo.h  sample.c  sample.h
fibo/programs/: Makefile  fibo  fibocli.c
fibowrapper/: .editorconfig  .gitignore  Makefile  README.md
fibowrapper/cmake/: CMakeLists.txt
fibowrapper/lib/: Makefile  fibo.h  wrapper.c  wrapper.h
fibowrapper/programs/: Makefile  fibocli.c  wrapper  wrappercli.c
mbedtls_wrapper/: .gitignore  CMakeLists.txt
sandbox/Wrapper/: Wrapper.sln
tools/: .gitignore
tools/MbedtlsReader/: MbedtlsReader.sln
tools/SymbolConverter/: SymbolConverter.sln
(+171 files in other folders)
